Adcionar ícone carrinho

--- a/index.html
+++ b/index.html
@@ -40,6 +40,9 @@
                       <li><a class="dropdown-item" href="#">Envie uma mensagem</a></li>
                     </ul>
                   </li>
+                  <li>
+                    <i class="bi bi-cart-check"></i>
+                  </li>
             </ul>
         </div>
         </nav>
